--- a/main.html
+++ b/main.html
@@ -3,10 +3,21 @@
 <html>
 
 <head>
+	<title>Trivia</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<b>What is the capital of India?</b>
+	<br><br>
+	<input type="radio" name="capital">New Delhi
+	<br>
+	<input type="radio" name="capital">Mumbai
+	<div>
+		<blockquote id= "design" cite="https://en.wikipedia.org/wiki/New_Delhi">
+			New Delhi is the capital of India and an administrative district of NCT Delhi.
+		</blockquote>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
